assets/css/style.css
/* ... */
.card h2 {
    font-size: 24px;
    font-weight: bold;
}

.card p {
    font-size: 16px;
}

/* VIDEO CARDS (section 3) */
.separator {
    width: 100%;
    border: 1px solid rgba(58, 47, 47, 0.7);
    box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
    margin-bottom: 70px;
}

.section-card article {
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 50px;
    padding-right: 50px;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 70px;
}

.section-card h2 {
    margin-bottom: 10px;
}

.landing-iframe {
    width: 50%;
    height: 300px;
    margin: 20px;
    text-align: center;
    border: 1px solid #f7e2e2;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
}

/* FOOTER */
.footer-body {
    text-align: center;
    display: inline-block;
    padding-top: 10px;
    background-color: #ffffff;
    box-shadow: 10px 10px 5px 12px rgba(58, 47, 47, 0.7);
}

/* Left side of the Footer */
#footer-left {
    float: left;
    text-align: left;
}

#footer-left h1 {
    color: #a32020;
}

#footer-left a {
    margin-left: 30px;
    text-decoration: none;
    font-weight: bold;
    color: black;
}

#footer-left a span {
    color: black;
}

#footer-left a:hover {
    color: #20A3A3;
}

/* Center of the Footer */
#footer-center {
    display: inline-block;
    margin: 0 auto;
    text-align: left;
}

#footer-center i,
p {
    display: inline;
}

#footer-center p,
#footer-right p {
    font-weight: bold;
}

/* Right side of the footer */
#footer-right {
    margin-right: 30px;
    float: right;
    text-align: left;
}

#footer-right a {
    font-size: 50px;
    color: #a32020;
    margin: 10px;
    text-decoration: none;
}

#footer-right a:hover {
    color: #20A3A3;
}

#footer-left,
#footer-center,
#footer-right {
    display: inline-block;
    text-align: center;
    margin-bottom: 20px;
}


/* ---------------------------------------- OFFERS PAGE ---------------------------------------- */
/* Mountain, Sea and City containers */
#mountain-section,
#sea-section,
#city-section {
    width: 80%;
    margin: auto;
    position: relative;
    background-color: #f7e2e2;
    border-radius: 5px;
    box-shadow: 0 1px 5px rgba(58, 47, 47, 0.7);
    background: url(../images/parallax-offers-1.jpg);
    background-attachment: fixed;  /*parallax efect*/
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* text from outside of the sections */
.section-center-text {
    margin-top: 70px;
    margin-bottom: 25px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    color: black;
    font-family: Lobster;
    letter-spacing: 5px;
}

.cards-offers {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 40px;
}

/* Offer card */
.card-offers {
    width: 300px;
    height: 100%;
    margin: 40px;
    border: 1px solid #f7e2e2;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
    background-color: #ffffff;
}

.card-offers img {
    width: 100%;
    height: 200px;
    border-radius: 5px 5px 0 0;
    display: flex;
}

/* The border line */
.card-aside {
    margin-top: 20px;
    border-top: 1px solid #333;
}

.card-offers-text {
    padding: 20px;
    margin-top: 10px;
    text-align: left;
    color: black;
    margin-left: 5px;
}

.card-offers-text a {
    color: black;
    text-decoration: none;
}

.card-offers-text span {
    text-decoration: none;
    text-align: left;
    color: black;
    font-size: 12px;
}

.card-offers-text i {
    color: #a32020;
    text-decoration: none;
    text-align: left;
    font-size: 15px;
    margin: 2px;
}

.card-offers-text p {
    margin-top: 20px;
    color: black;
    font-size: 15px;
}

/* Book button */
.card-offers-text button {
    background-color: #20A3A3;
    color: #f7e2e2;
    font-size: 12px;
    float: right;
    margin-right: 5px;
    margin-bottom: 10px;

    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 4px;
    padding-right: 4px;

    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
}

/* Inspired from:
https://www.tutorialspoint.com/how-to-align-the-modal-content-box-to-the-center-of-any-screen?fbclid=IwAR0B5UzubrLahMMh2J2dPcV9jevHQ9C2cuEL2E28yHhAm4tnft9KEO8RM8E */
.modal-container {
    display: none;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.7);
    
}

/* Inspired from:
https://www.tutorialspoint.com/how-to-align-the-modal-content-box-to-the-center-of-any-screen?fbclid=IwAR0B5UzubrLahMMh2J2dPcV9jevHQ9C2cuEL2E28yHhAm4tnft9KEO8RM8E */
.modal {
    background-color: rgba(56, 45, 45, 0.95);
    padding: 20px;
    border-radius: 10px;
    width: 450px;
    height: 350px;
    box-shadow: 0px 0px 10px #242323;
}

/* Inspired from:
https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_modal_login */
.close-modal {
    float: right;
    margin-right: 5px;
    border: none;
    padding: 8px 16px;
    overflow: hidden;
    text-decoration: none;
    background-color: #20A3A3;
    cursor: pointer;
    white-space: nowrap;
}

/* Copied "animatezoom" animation from:
https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_modal4 */
.animate-zoom {
    animation: animatezoom 0.6s
}

/* Copied "animatezoom" animation from:
https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_modal4 */
@keyframes animatezoom {
    from {
        transform: scale(0)
    }

    to {
        transform: scale(1)
    }
}

/* ---------------------------------------- CONTACT PAGE ---------------------------------------- */
.container {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    background: url(../images/landing-img.jpeg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
/* ... */

